--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-horizontal-scrolling-menu": "^4.1.0",
     "react-loader-spinner": "^5.3.4",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "vercel": "^31.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
